src/components/Bubble/styles.css
.Bubble {
  cursor: pointer;
  background-color: var(--caribbean-green);
  position: fixed;
  bottom: 25px;
  right: 25px;
  height: 60px;
  width: 60px;
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 5px;
  border: 0;
  border-radius: 100%;
  transition: .3s;
}

.Bubble:hover {
  filter: brightness(95%);
}

